--- a/.github/quy trình công việc/mai1n.yml
+++ b/.github/quy trình công việc/mai1n.yml
@@ -1,41 +1,12 @@
-name: CI
+local Library = loadstring(game:HttpGet("https://raw.githubusercontent.com/xHeptc/Kavo-UI-Library/main/source.lua"))()
+local Window = Library.CreateLib("thanh evo", "DarkTheme")
+local Tab = Window:NewTab("hack bloxfruit")
+local Section = Tab:NewSection("script")
 
-on: [push, workflow_dispatch]
+Section:NewButton("menu hack tiếng việt", "otc", function()
+loadstring(game:HttpGet("https://raw.githubusercontent.com/blackundo/repo-roblox/main/BF_UndoV1.lua"))()
+end)
 
-jobs:
-
-  build:
-
-    runs-on: windows-latest
-
-    steps:
-
-    - name: Download
-
-      run: Invoke-WebRequest https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-windows-amd64.zip -OutFile ngrok.zip
-
-    - name: Extract
-
-      run: Expand-Archive ngrok.zip
-
-    - name: Auth
-
-      run: .\ngrok\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
-
-      env:
-
-        NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
-
-    - name: Enable TS
-
-      run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server'-name "fDenyTSConnections" -Value 0
-
-    - run: Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
-
-    - run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 1
-
-    - run: Set-LocalUser -Name "runneradmin" -Password (ConvertTo-SecureString -AsPlainText "P@ssw0rd!" -Force)
-
-    - name: Create Tunnel
-
-      run: .\ngrok\ngrok.exe tcp 3389
+Section:NewButton("tự động nhặc rương", "otc", function()
+loadstring(game:HttpGet("https://raw.githubusercontent.com/markxd07/get-chest-bf/main/luxuryhub.lua"))()
+end)
